--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,8 @@ android {
 
 dependencies {
 
+    implementation project(":exo-player-compose")
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
@@ -59,4 +61,7 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+
+    //ExoPlayer
+    implementation 'com.google.android.exoplayer:exoplayer:2.18.0'
 }
