--- a/exo-player-compose/build.gradle
+++ b/exo-player-compose/build.gradle
@@ -28,6 +28,12 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        compose true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion compose_version
+    }
 }
 
 dependencies {
@@ -38,6 +44,17 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //Compose
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.material:material:$compose_version"
+
+    //Coil
+    implementation("io.coil-kt:coil-compose:2.1.0")
+
+    //ExoPlayer
+    implementation 'com.google.android.exoplayer:exoplayer:2.18.0'
+
 }
 
 afterEvaluate {
@@ -46,7 +63,7 @@ afterEvaluate {
             release(MavenPublication) {
                 from components.release
 
-                groupId = 'com.github.danila009'
+                groupId = 'com.github.Danila009'
                 artifactId = 'exo-player-compose'
                 version = '0.0.1'
             }
