--- a/exo-player-compose/build.gradle
+++ b/exo-player-compose/build.gradle
@@ -21,6 +21,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -52,9 +53,12 @@ dependencies {
     //Coil
     implementation("io.coil-kt:coil-compose:2.1.0")
 
+    implementation "com.github.bumptech.glide:glide:4.13.0"
+    annotationProcessor "com.github.bumptech.glide:compiler:4.13.0"
+
     //ExoPlayer
     implementation 'com.google.android.exoplayer:exoplayer:2.18.0'
-
+    implementation "com.google.android.exoplayer:exoplayer-ui:2.18.0"
 }
 
 afterEvaluate {
@@ -65,7 +69,7 @@ afterEvaluate {
 
                 groupId = 'com.github.Danila009'
                 artifactId = 'exo-player-compose'
-                version = '0.0.1'
+                version = '0.1.0'
             }
         }
     }
