--- a/exo-player-compose/build.gradle
+++ b/exo-player-compose/build.gradle
@@ -53,12 +53,14 @@ dependencies {
     //Coil
     implementation("io.coil-kt:coil-compose:2.1.0")
 
+    //Glide
     implementation "com.github.bumptech.glide:glide:4.13.0"
     annotationProcessor "com.github.bumptech.glide:compiler:4.13.0"
 
     //ExoPlayer
     implementation 'com.google.android.exoplayer:exoplayer:2.18.0'
     implementation "com.google.android.exoplayer:exoplayer-ui:2.18.0"
+    implementation 'com.google.android.exoplayer:exoplayer-core:2.18.0'
 }
 
 afterEvaluate {
